---
layout: simon-default
title: Change Log
root-url: ../
simon-tab-class: tabbar-tab-highlighted
---
h1. Version 0.1.9, May 2012

* Added the boolean property logActions to enabled/isable logging of actions to help debug.
* Modifed the startup so that the SIAppBackpack is automatically loaded when the runtime starts. This removes the need to manually inject it in the main.m file.
* Added a --no-autorun program argument which can be used to stop the stories from running on startup.
* Added a --no-load program argument which stops Simon from loading. Really useful for unit testing Simon. Not much else.

h1. Version 0.1.8, April 2012

* Moved execution recording and exception handling to SIStory to facilitate better reporting.
* Refactoring the backpack and runner to enable running of individual tests.
* Revamped UI for a better summary.
* Refactored so that the UI can be displayed without running tests.
* Added a search bar to the story report.
* Added ability to rerun all tests and search test file names and titles.


h1. Version 0.1.7, March 2012

* Added a macro: SIIsViewPresent.
* Renamed SITapControl to SITapView.
* Renamed SISWipeControl to SISWipeView.
* Modded SITapView to accept both a NSString *query and a UIView *view as a parameter and to return the view it tapped.
* Modded SISwipeView to accept both a NSString *query and a UIView *view as a parameter and to return the view it swiped.
* Cleaned up some old references in SIUIApplication.
* Added new macros SIAssertViewPresent and SIAssertViewNotPresent.
* Added new macro SIAssertLabelTextEquals.
* Fixed issue where creating UITouch and UIEvents on a background thread would trigger a 0xbbadbeef crash.
* Refactored SIUIEventGenerator into an abstract class. 
* Updated logging of UI to include all windows being displayed. This now picks up the keyboard.
* Refactored event sending code and background sending detection. Now a lot simpler due to using blocks.