@@ -659,10 +659,6 @@
 				65FCD12413AF622300A90FCA /* SIRuntime.h */,
 				65FCD12513AF622300A90FCA /* SIRuntime.m */,
 				6551A99213ACDEBE00679B94 /* SISimon.h */,
-				653D0EBC13A783C000A5AB82 /* SIStoryFileReader.h */,
-				653D0EBD13A783C000A5AB82 /* SIStoryFileReader.m */,
-				6551A97F13AB904900679B94 /* SIStoryRunner.h */,
-				6551A98013AB904A00679B94 /* SIStoryRunner.m */,
 				659E629B13DAFC4000ACD34C /* SIUIApplication.h */,
 				659E629C13DAFC4000ACD34C /* SIUIApplication.m */,
 				6583B42F13D1C9FF005E13F3 /* Stories */,
@@ -717,6 +713,10 @@
 		6583B42F13D1C9FF005E13F3 /* Stories */ = {
 			isa = PBXGroup;
 			children = (
+				653D0EBC13A783C000A5AB82 /* SIStoryFileReader.h */,
+				653D0EBD13A783C000A5AB82 /* SIStoryFileReader.m */,
+				6551A97F13AB904900679B94 /* SIStoryRunner.h */,
+				6551A98013AB904A00679B94 /* SIStoryRunner.m */,
 				653D0EB513A783C000A5AB82 /* SIStep.h */,
 				653D0EB613A783C000A5AB82 /* SIStep.m */,
 				65FCD11C13AE2D6900A90FCA /* SIStepMapping.h */,
