@@ -4,12 +4,14 @@ title: Change Log
 root-url: ../
 simon-tab-class: tabbar-tab-highlighted
 ---
-h1. Version 0.1.9, May 2012
+h1. Version 0.1.9, Aug 2012
 
 * Added the boolean property logActions to enabled/isable logging of actions to help debug.
 * Modifed the startup so that the SIAppBackpack is automatically loaded when the runtime starts. This removes the need to manually inject it in the main.m file.
 * Added a --no-autorun program argument which can be used to stop the stories from running on startup.
 * Added a --no-load program argument which stops Simon from loading. Really useful for unit testing Simon. Not much else.
+* Changed startup so that instead of loading the UI by default, it now starts a HTTP server which waits for commands.
+* Added a --ui command argument which loads the UI instead of the HTTP server.
 
 h1. Version 0.1.8, April 2012
 
